--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,12 +15,20 @@ phases:
       - echo Fetching Git commit hash...
       - GIT_COMMIT_HASH=$(git rev-parse HEAD)
       - echo Building Docker image...
-      - docker build -t $IMAGE_REPO_NAME:$GIT_COMMIT_HASH .
-      - docker tag $IMAGE_REPO_NAME:$GIT_COMMIT_HASH $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$GIT_COMMIT_HASH
+      - echo $IMAGE_REPO_NAME:$GIT_COMMIT_HASH
+      - TAG="$IMAGE_REPO_NAME:$GIT_COMMIT_HASH"
+      - TAG=$(echo ${TAG} | tr -d '[:space:]')
+      - echo "Docker build command docker build --build-arg DATABASE_NAME=postgres --build-arg DATABASE_USER=${DATABASE_USER} --build-arg DATABASE_PASSWORD=${DATABASE_PASSWORD} --build-arg DATABASE_HOST=${DATABASE_HOST} --build-arg DATABASE_PORT=${DATABASE_PORT} --build-arg SECRET_KEY_STAGING=${SECRET_KEY_STAGING} -t ${TAG} ."
+      - docker build --build-arg DATABASE_NAME=postgres --build-arg DATABASE_USER=${DATABASE_USER} --build-arg DATABASE_PASSWORD=${DATABASE_PASSWORD} --build-arg DATABASE_HOST=${DATABASE_HOST} --build-arg DATABASE_PORT=${DATABASE_PORT} --build-arg SECRET_KEY_STAGING=${SECRET_KEY_STAGING} -t ${TAG} .
+      - IMAGE_URI="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$GIT_COMMIT_HASH"
+      - IMAGE_URI=$(echo ${IMAGE_URI} | tr -d '[:space:]')
+      - docker tag ${IMAGE_REPO_NAME}:${GIT_COMMIT_HASH} ${IMAGE_URI}
 
   post_build:
     commands:
-      - docker run --rm $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$GIT_COMMIT_HASH python manage.py migrate
+      - echo Verifying Docker login...
+      - docker info  # This will show the Docker daemon info and confirm login status
       - echo Pushing Docker image to ECR...
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$GIT_COMMIT_HASH
-
+      - echo "Docker image URI is ${IMAGE_URI}"
+      - docker push ${IMAGE_URI}
+      - echo Docker image push complete.
