--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
       - TAG="$IMAGE_REPO_NAME:$GIT_COMMIT_HASH"
       - TAG=$(echo ${TAG} | tr -d '[:space:]')
       - echo "Docker build command docker build --build-arg DATABASE_NAME=postgres --build-arg DATABASE_USER=${DATABASE_USER} --build-arg DATABASE_PASSWORD=${DATABASE_PASSWORD} --build-arg DATABASE_HOST=${DATABASE_HOST} --build-arg DATABASE_PORT=${DATABASE_PORT} --build-arg SECRET_KEY_STAGING=${SECRET_KEY_STAGING} -t ${TAG} ."
-      - docker build --build-arg DATABASE_NAME=postgres --build-arg DATABASE_USER=${DATABASE_USER} --build-arg DATABASE_PASSWORD=${DATABASE_PASSWORD} --build-arg DATABASE_HOST=${DATABASE_HOST} --build-arg DATABASE_PORT=${DATABASE_PORT} --build-arg SECRET_KEY_STAGING=${SECRET_KEY_STAGING} -t ${TAG} .
+      - docker build --build-arg DATABASE_NAME=postgres --build-arg DATABASE_USER=${DATABASE_USER} --build-arg DATABASE_PASSWORD=${DATABASE_PASSWORD} --build-arg DATABASE_HOST=${DATABASE_HOST} --build-arg DATABASE_PORT=${DATABASE_PORT} --build-arg SECRET_KEY=${SECRET_KEY} -t ${TAG} .
       - IMAGE_URI="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$GIT_COMMIT_HASH"
       - IMAGE_URI=$(echo ${IMAGE_URI} | tr -d '[:space:]')
       - docker tag ${IMAGE_REPO_NAME}:${GIT_COMMIT_HASH} ${IMAGE_URI}
