--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 amqp==5.2.0
 annotated-types==0.7.0
 asgiref==3.8.1
+backports.zoneinfo==0.2.1
 beautifulsoup4==4.12.3
 billiard==4.2.0
 blinker==1.7.0
@@ -15,14 +16,14 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 cryptography==42.0.5
-Django==5.0.6
+Django==3.2
+django-cors-headers==4.4.0
 djangorestframework==3.15.1
 firebase-admin==6.5.0
 Flask==3.0.2
 Flask-Cors==4.0.0
 geographiclib==2.0
 geopy==2.4.1
-google-ai-generativelanguage==0.6.5
 google-api-core==2.18.0
 google-api-python-client==2.125.0
 google-auth==2.29.0
@@ -31,7 +32,6 @@ google-cloud-core==2.4.1
 google-cloud-firestore==2.16.0
 google-cloud-storage==2.16.0
 google-crc32c==1.5.0
-google-generativeai==0.7.0
 google-resumable-media==2.7.0
 googleapis-common-protos==1.63.0
 grpcio==1.62.1
@@ -39,6 +39,7 @@ grpcio-status==1.62.1
 gunicorn==22.0.0
 httplib2==0.22.0
 idna==3.6
+importlib_metadata==8.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 jwt==1.3.1
@@ -76,3 +77,4 @@ urllib3==2.2.1
 vine==5.1.0
 wcwidth==0.2.13
 Werkzeug==3.0.2
+zipp==3.19.2
