--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ cryptography==42.0.5
 Django==3.2
 django-cors-headers==4.4.0
 djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
 firebase-admin==6.5.0
 Flask==3.0.2
 Flask-Cors==4.0.0
@@ -42,7 +43,6 @@ idna==3.6
 importlib_metadata==8.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
-jwt==1.3.1
 kombu==5.3.7
 lxml==5.2.2
 MarkupSafe==2.1.5
@@ -65,6 +65,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 requests==2.31.0
+rest-framework-simplejwt==0.0.2
 rsa==4.9
 six==1.16.0
 soupsieve==2.5
