--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 amqp==5.2.0
 annotated-types==0.7.0
 asgiref==3.8.1
-backports.zoneinfo==0.2.1
 beautifulsoup4==4.12.3
 billiard==4.2.0
 blinker==1.7.0
@@ -15,9 +14,12 @@ click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+cron-descriptor==1.4.3
 cryptography==42.0.5
 Django==3.2
+django-celery-beat==2.6.0
 django-cors-headers==4.4.0
+django-timezone-field==6.1.0
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 firebase-admin==6.5.0
@@ -61,6 +63,7 @@ pydantic==2.7.4
 pydantic_core==2.18.4
 PyJWT==2.8.0
 pyparsing==3.1.2
+python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
