--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,8 @@ google-cloud-storage==2.16.0
 google-crc32c==1.5.0
 google-resumable-media==2.7.0
 googleapis-common-protos==1.63.0
+google-generativeai
+
 grpcio==1.62.1
 grpcio-status==1.62.1
 gunicorn==22.0.0
@@ -67,6 +69,8 @@ python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
+redis==4.2.0
+
 requests==2.31.0
 rest-framework-simplejwt==0.0.2
 rsa==4.9
