--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 amqp==5.2.0
 annotated-types==0.7.0
 asgiref==3.8.1
+async-timeout==4.0.3
+backports.zoneinfo==0.2.1
 beautifulsoup4==4.12.3
 billiard==4.2.0
 blinker==1.7.0
@@ -17,6 +19,7 @@ click-repl==0.3.0
 cron-descriptor==1.4.3
 cryptography==42.0.5
 Django==3.2
+django-cacheops==7.0.2
 django-celery-beat==2.6.0
 django-cors-headers==4.4.0
 django-timezone-field==6.1.0
@@ -25,6 +28,7 @@ djangorestframework-simplejwt==5.3.1
 firebase-admin==6.5.0
 Flask==3.0.2
 Flask-Cors==4.0.0
+funcy==2.0
 geographiclib==2.0
 geopy==2.4.1
 google-api-core==2.18.0
@@ -52,6 +56,7 @@ msgpack==1.0.8
 npm==0.1.1
 optional-django==0.1.0
 packaging==24.1
+pillow==10.4.0
 prompt_toolkit==3.0.47
 proto-plus==1.23.0
 protobuf==4.25.3
@@ -67,6 +72,7 @@ python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
+redis==5.0.7
 requests==2.31.0
 rest-framework-simplejwt==0.0.2
 rsa==4.9
