--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ Django==3.2
 django-cacheops==7.0.2
 django-celery-beat==2.6.0
 django-cors-headers==4.4.0
+django-import-export
 django-timezone-field==6.1.0
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
