--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ django-cacheops==7.0.2
 django-celery-beat==2.6.0
 django-cors-headers==4.4.0
 django-import-export==4.1.1
+django-redis==5.4.0
 django-timezone-field==6.1.0
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
