--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ click-repl==0.3.0
 cron-descriptor==1.4.3
 cryptography==42.0.5
 diff-match-patch==20230430
-Django==3.2.9
+Django==5.0.7
 django-allauth==0.63.6
 django-cacheops==7.0.2
 django-celery-beat==2.6.0
@@ -35,7 +35,7 @@ funcy==2.0
 geographiclib==2.0
 geopy==2.4.1
 google==3.0.0
-google-ai-generativelanguage==0.1.0
+google-ai-generativelanguage==0.6.6
 google-api-core==2.18.0
 google-api-python-client==2.125.0
 google-auth==2.29.0
@@ -44,7 +44,7 @@ google-cloud-core==2.4.1
 google-cloud-firestore==2.16.0
 google-cloud-storage==2.16.0
 google-crc32c==1.5.0
-google-generativeai==0.1.0rc1
+google-generativeai==0.7.2
 google-resumable-media==2.7.0
 googleapis-common-protos==1.63.0
 grpcio==1.62.1
